# SynBioKB-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  apis.yaml.example  docker-compose.yml  llm.yaml.example  pyproject.toml  setup.cfg  urls.txt  urls_ab.txt
.git.backup/: FETCH_HEAD  ORIG_HEAD  config  description  index
.git.backup/logs/: HEAD
nextflow/: main.nf  nextflow.config
scripts/: ab_compare_extract.py  ab_crawl.sh  make_docs.py
src/biosyn_kb/: api_config.py  cli.py  settings.py
src/biosyn_kb/agents/: __init__.py  base.py  crew.py  crew_stub.py  crewai_impl.py  orchestrator.py
src/biosyn_kb/crawl/: __init__.py  fetcher.py  headless.py  models.py  robots.py
src/biosyn_kb/entities/: __init__.py  extract.py  llm.py
src/biosyn_kb/extract/: __init__.py  clean.py  pdf.py  text.py
src/biosyn_kb/filter/: __init__.py  relevance.py
src/biosyn_kb/llm/: __init__.py  config.py  factory.py  ollama_client.py  openai_client.py
src/biosyn_kb/normalize/: registry.py
src/biosyn_kb/pdf/: __init__.py  downloader.py
src/biosyn_kb/pipeline/: checkpoints.py
src/biosyn_kb/queue/: __init__.py  dbq.py
src/biosyn_kb/rag/: vector_store.py
src/biosyn_kb/report/: compose.py
src/biosyn_kb/search/: __init__.py  base.py  brave.py  clients.py  open_access.py  serpapi.py
src/biosyn_kb/store/: __init__.py  db.py
src/biosyn_kb/summarize/: __init__.py  pipeline.py  prompt.py  schema.py
src/biosyn_kb/validate/: __init__.py  (+2 more)
tests/: test_3hp_light.py  test_agents_light.py  test_cleaner.py  test_schema_db.py  test_validate_and_rag.py
workflows/nextflow/: README.md  main.nf
(+7 files in other folders)
