[metadata]
name = biosyn-kb
version = 0.1.0
description = Web-search-driven biosynthesis knowledge base agent
long_description = file: README.md
long_description_content_type = text/markdown
author = Biosyn KB

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    httpx>=0.27.0
    pydantic>=2.6.0
    pydantic-settings>=2.2.0
    beautifulsoup4>=4.12.0
    tldextract>=5.1.2
    PyYAML>=6.0.1
    trafilatura>=1.7.0
    SQLAlchemy>=2.0.30

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biosyn-kb = biosyn_kb.cli:main
